--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.3.0",
     "react-router-native": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.4.0",
     "reactstrap": "^8.10.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
