--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "front_web",
-  "version": "0.1.0",
+  "name": "tcc_segundo_front_web",
+  "version": "1.1.1",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "html5-file-selector": "^2.1.0",
-    "node-sass": "^4.14.1",
+    "dotenv": "^16.0.2",
+    "npm-install-all": "^1.1.21",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.0",
-    "react-router-native": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^5.2.0",
+    "react-script": "^2.0.5",
+    "react-scripts": "^4.0.1",
     "react-select": "^5.4.0",
-    "reactstrap": "^8.10.0",
-    "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "react-switch": "^7.0.0",
+    "reactstrap": "^9.1.4",
+    "use-history": "^1.4.1"
   },
   "scripts": {
     "start": "cross-env PORT=3055 react-scripts start",
