--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-select": "^5.4.0",
     "reactstrap": "^8.10.0",
     "styled-components": "^5.3.1",
+    "use-context": "^0.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
