--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-    "name": "front_web",
-    "version": "0.1.0",
-    "engines": {      
-      "yarn": "1.22.x"
-    },
-    "private": true,
-    "dependencies": {
-      "@material-ui/core": "^4.12.4",
-      "@testing-library/jest-dom": "^5.11.4",
-      "@testing-library/react": "^11.1.0",
-      "@testing-library/user-event": "^12.1.10",
-      "axios": "^0.23.0",
-      "bootstrap": "^5.1.3",
-      "cors": "^2.8.5",
-      "cross-env": "^7.0.3",
-      "html5-file-selector": "^2.1.0",
-      "react": "^17.0.2",
-      "react-dom": "^17.0.2",
-      "react-icons": "^4.3.1",
-      "react-router-dom": "^5.3.0",
-      "react-router-native": "^5.2.1",
-      "react-scripts": "4.0.3",
-      "react-select": "^5.4.0",
-      "reactstrap": "^8.10.0",
-      "styled-components": "^5.3.1",
-      "use-context": "^0.0.1",
-      "web-vitals": "^1.0.1"
-    },
-    "scripts": {
-      "start": "cross-env PORT=3055 react-scripts start",
-      "dev": "cross-env react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
-    }
+  "name": "front_web",
+  "version": "0.1.0",
+  "engines": {
+    "yarn": "1.22.x"
+  },
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.1",
+    "html5-file-selector": "^2.1.0",
+    "node-sass": "^7.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
+    "react-router-native": "^5.2.1",
+    "react-scripts": "4.0.3",
+    "react-select": "^5.4.0",
+    "reactstrap": "^8.10.0",
+    "styled-components": "^5.3.1",
+    "use-context": "^0.0.1",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "cross-env PORT=3055 react-scripts start",
+    "dev": "cross-env react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
-  
+}
