--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "html5-file-selector": "^2.1.0",
     "node-sass": "^7.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
+    "react-bootstrap-dropdown": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
