--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "node servidor.js",
+    "start": "servidor.js",
     "dev": "cross-env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
