--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front_web",
   "version": "0.1.0",
   "engines": {
-    "node": "^8 || ^10"
+    "node": "^8"
   },
   "private": true,
   "dependencies": {
