--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "front_web",
   "version": "0.1.0",
   "engines": {
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=16.0.0 <17.0.0"
+    "npm" : ">8.0.0",
+    "node" : ">16.0.0"
   },
   "private": true,
   "dependencies": {
