--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "front_web",
   "version": "0.1.0",
   "engines": {
-    "npm" : ">8.0.0",
-    "node" : ">16.0.0"
+    "npm": ">8.0.0",
+    "node": ">16.0.0"
   },
   "private": true,
   "dependencies": {
@@ -26,7 +26,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-router-native": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "reactstrap": "^8.10.0",
     "styled-components": "^5.3.1",
