--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "front_web",
   "version": "0.1.0",
   "engines": {
-    "npm": ">8.0.0",
-    "node": ">16.0.0"
+    "yarn": ">=1.x.x"
   },
   "private": true,
   "dependencies": {
