--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "front_web",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "engines": {
-    "yarn": ">=1.x.x"
+    "yarn": ">=1.22.x"
   },
   "private": true,
   "dependencies": {
@@ -25,7 +25,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-router-native": "^5.2.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.4.0",
     "reactstrap": "^8.10.0",
     "styled-components": "^5.3.1",
