--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.8",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^5.3.0",
     "react-router-native": "^5.2.1",
     "react-scripts": "^5.0.0",
